--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-	Student Name: Maria Cruz
+	Student Name: Logan Bucher
 	File Name: template.html
 	Today's Date: May 7, 2021
  -->
@@ -16,20 +16,22 @@
 	</header>
 	
 	<nav>
-		<p>Home &nbsp; &#9838; &nbsp; 
-		Lessons &nbsp; &#9838; &nbsp; 
-		Instructors &nbsp; &#9838; &nbsp; 
-		Rentals &nbsp; &#9838; &nbsp; 
-		Contact</p>
+		<p><a href="home.html">Home</a> &nbsp; &#9838; &nbsp; 
+			<a href="lessons.html">Lessons</a> &nbsp; &#9838; &nbsp; 
+			<a href="instructors.html">Instructors</a> &nbsp; &#9838; &nbsp; 
+			<a href="rental.html">Rentals</a> &nbsp; &#9838; &nbsp; 
+			<a href="contact.html">Contact</a></p>
 	</nav>
 	
 	<!-- Use the main area to add the main content to the webpage -->
 	<main>
+	<div>
+	</div>
 	</main>
 	
 	<footer>
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
-		<p>lessons@strikeachord.net</p>
+		<p><a href="lessons@strikeachord.net">lessons@strikeachord.net</a></p>
 	</footer>
 	
 </body>
